--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,28 @@
         </div>
     </div>
 
+    <!-- Modal de Login/Registro -->
+    <div id="auth-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+        <div class="bg-white p-6 rounded-lg shadow-xl max-w-sm w-full mx-4">
+            <h2 class="text-xl font-bold mb-4 text-gray-800">Acceso Usuario</h2>
+            <div class="space-y-4">
+                <div>
+                    <label class="block text-sm font-medium text-gray-700 mb-1">Email</label>
+                    <input type="email" id="auth-email" class="w-full p-2 border rounded focus:ring-2 focus:ring-blue-500 outline-none" placeholder="tu@email.com">
+                </div>
+                <div>
+                    <label class="block text-sm font-medium text-gray-700 mb-1">Contraseña</label>
+                    <input type="password" id="auth-password" class="w-full p-2 border rounded focus:ring-2 focus:ring-blue-500 outline-none" placeholder="******">
+                </div>
+                <div class="flex gap-2 pt-2">
+                    <button onclick="handleAuth('login')" class="flex-1 bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition">Entrar</button>
+                    <button onclick="handleAuth('signup')" class="flex-1 bg-gray-200 text-gray-800 py-2 rounded hover:bg-gray-300 transition">Registrarse</button>
+                </div>
+                <button onclick="closeAuthModal()" class="w-full text-gray-500 text-sm hover:text-gray-700 mt-2">Cancelar</button>
+            </div>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
