--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,11 @@
                     <label class="block text-sm font-medium text-gray-700 mb-1">Email</label>
                     <input type="email" id="recovery-email" class="w-full p-2 border rounded focus:ring-2 focus:ring-blue-500 outline-none" placeholder="tu@email.com">
                 </div>
-                <button onclick="sendPasswordResetEmail()" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition">Enviar Enlace</button>
+                
+                <!-- Mensaje de estado -->
+                <div id="recovery-message" class="hidden text-sm p-2 rounded text-center"></div>
+
+                <button onclick="sendPasswordResetEmail(this)" class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition">Enviar Enlace</button>
                 <button onclick="closeForgotPasswordModal()" class="w-full text-gray-500 text-sm hover:text-gray-700 mt-2">Cancelar</button>
             </div>
         </div>
