--- a/src/admin.html
+++ b/src/admin.html
@@ -71,24 +71,47 @@
             </div>
         </div>
 
-        <!-- Live Feed -->
-        <div class="mt-8 bg-white p-6 rounded-lg shadow">
-            <h3 class="text-lg font-bold mb-4 text-gray-700">Feed en Tiempo Real</h3>
-            <div class="overflow-x-auto">
-                <table class="min-w-full text-sm text-left text-gray-500">
-                    <thead class="text-xs text-gray-700 uppercase bg-gray-50">
-                        <tr>
-                            <th class="px-6 py-3">Hora</th>
-                            <th class="px-6 py-3">Aula</th>
-                            <th class="px-6 py-3">Voto</th>
-                            <th class="px-6 py-3">Usuario</th>
-                        </tr>
-                    </thead>
-                    <tbody id="feed-body">
-                        <!-- Rows injected by JS -->
-                    </tbody>
-                </table>
+        <!-- Bottom Section: Live Feed & Leaderboard -->
+        <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 mt-8">
+            
+            <!-- Live Feed (2/3 width) -->
+            <div class="lg:col-span-2 bg-white p-6 rounded-lg shadow">
+                <h3 class="text-lg font-bold mb-4 text-gray-700">Feed en Tiempo Real</h3>
+                <div class="overflow-x-auto">
+                    <table class="min-w-full text-sm text-left text-gray-500">
+                        <thead class="text-xs text-gray-700 uppercase bg-gray-50">
+                            <tr>
+                                <th class="px-6 py-3">Hora</th>
+                                <th class="px-6 py-3">Aula</th>
+                                <th class="px-6 py-3">Voto</th>
+                                <th class="px-6 py-3">Usuario</th>
+                            </tr>
+                        </thead>
+                        <tbody id="feed-body">
+                            <!-- Rows injected by JS -->
+                        </tbody>
+                    </table>
+                </div>
             </div>
+
+            <!-- Leaderboard (1/3 width) -->
+            <div class="bg-white p-6 rounded-lg shadow">
+                <h3 class="text-lg font-bold mb-4 text-gray-700">🏆 Ranking Usuarios</h3>
+                <div class="overflow-y-auto max-h-96">
+                    <table class="min-w-full text-sm text-left text-gray-500">
+                        <thead class="text-xs text-gray-700 uppercase bg-gray-50">
+                            <tr>
+                                <th class="px-4 py-3">Usuario</th>
+                                <th class="px-4 py-3 text-right">Puntos</th>
+                            </tr>
+                        </thead>
+                        <tbody id="leaderboard-body">
+                            <!-- Rows injected by JS -->
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
         </div>
     </div>
 
