--- a/src/admin.html
+++ b/src/admin.html
@@ -39,6 +39,32 @@
             <a href="index.html" class="text-blue-600 hover:underline">← Volver a Votación</a>
         </header>
 
+        <!-- Config Section -->
+        <div class="bg-white p-6 rounded-lg shadow mb-8">
+            <h2 class="text-xl font-bold text-gray-800 mb-4">⚙️ Configuración del Sistema</h2>
+            
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <!-- Vote Interval -->
+                <div>
+                    <label class="block text-sm font-medium text-gray-700 mb-2">Tiempo mínimo entre votos (minutos)</label>
+                    <div class="flex items-center gap-4">
+                        <input type="number" id="config-interval" min="5" max="15" class="p-2 border rounded w-24" value="5">
+                        <button onclick="saveConfig()" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Guardar</button>
+                    </div>
+                    <p class="text-xs text-gray-500 mt-1">Debe ser entre 5 y 15 minutos.</p>
+                </div>
+
+                <!-- Aulas Management -->
+                <div>
+                    <label class="block text-sm font-medium text-gray-700 mb-2">Gestión de Aulas (Activar/Desactivar)</label>
+                    <div id="aulas-config-list" class="max-h-40 overflow-y-auto border rounded p-2 space-y-2">
+                        <!-- Injected by JS -->
+                        <p class="text-gray-400 text-sm">Cargando aulas...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Stats Cards -->
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
             <div class="bg-white p-6 rounded-lg shadow">
