Agregar funcionalidad para exportar datos a CSV y calcular promedios de confort por aula en el panel de administración

--- a/src/admin.html
+++ b/src/admin.html
@@ -72,13 +72,28 @@
                 <p class="text-3xl font-bold text-gray-800" id="total-votes">0</p>
             </div>
             <div class="bg-white p-6 rounded-lg shadow">
-                <h3 class="text-gray-500 text-sm uppercase">Promedio Confort</h3>
-                <p class="text-3xl font-bold text-gray-800" id="avg-comfort">-</p>
-                <p class="text-xs text-gray-400">Escala: -2 (Frío) a +2 (Calor)</p>
+                <h3 class="text-gray-500 text-sm uppercase">Exportar Datos</h3>
+                <div class="flex flex-col gap-2 mt-2">
+                    <button onclick="downloadVotesCSV()" class="bg-green-600 text-white text-sm py-2 px-4 rounded hover:bg-green-700 transition flex items-center justify-center gap-2">
+                        📄 Descargar Votos (CSV)
+                    </button>
+                    <button onclick="downloadPointsCSV()" class="bg-blue-600 text-white text-sm py-2 px-4 rounded hover:bg-blue-700 transition flex items-center justify-center gap-2">
+                        🏆 Descargar Puntos (CSV)
+                    </button>
+                </div>
             </div>
             <div class="bg-white p-6 rounded-lg shadow">
                 <h3 class="text-gray-500 text-sm uppercase">Última Actualización</h3>
                 <p class="text-sm font-mono text-gray-600 mt-2" id="last-update">Esperando datos...</p>
+            </div>
+        </div>
+
+        <!-- Promedio por Aula -->
+        <div class="bg-white p-6 rounded-lg shadow mb-8">
+            <h3 class="text-lg font-bold mb-4 text-gray-700">Promedio de Confort por Aula</h3>
+            <div id="aulas-avg-container" class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-4">
+                <!-- Injected by JS -->
+                <p class="text-gray-400 text-sm col-span-full">Calculando promedios...</p>
             </div>
         </div>
 
