--- a/src/index.html
+++ b/src/index.html
@@ -37,26 +37,8 @@
         <p class="text-gray-600 mb-6">Ayúdanos a mejorar el confort del aula.</p>
 
         <div id="voting-interface" class="grid grid-cols-5 gap-2 mb-6">
-            <button onclick="votar(-2)" class="flex flex-col items-center p-2 hover:bg-blue-50 rounded transition">
-                <span class="text-3xl">🥶</span>
-                <span class="text-xs mt-1">Muy Frío</span>
-            </button>
-            <button onclick="votar(-1)" class="flex flex-col items-center p-2 hover:bg-blue-50 rounded transition">
-                <span class="text-3xl">❄️</span>
-                <span class="text-xs mt-1">Fresco</span>
-            </button>
-            <button onclick="votar(0)" class="flex flex-col items-center p-2 hover:bg-green-50 rounded transition">
-                <span class="text-3xl">😊</span>
-                <span class="text-xs mt-1">Bien</span>
-            </button>
-            <button onclick="votar(1)" class="flex flex-col items-center p-2 hover:bg-orange-50 rounded transition">
-                <span class="text-3xl">🔥</span>
-                <span class="text-xs mt-1">Calor</span>
-            </button>
-            <button onclick="votar(2)" class="flex flex-col items-center p-2 hover:bg-red-50 rounded transition">
-                <span class="text-3xl">🥵</span>
-                <span class="text-xs mt-1">Muy Calor</span>
-            </button>
+            <!-- Injected by JS -->
+            <p class="col-span-5 text-gray-400 text-sm">Cargando opciones...</p>
         </div>
 
         <div id="status-message" class="hidden p-4 mb-4 text-sm rounded-lg" role="alert"></div>
